--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.1",
         "eventemitter2": "^6.4.9",
+        "is-promise": "^4.0.0",
         "joi": "^17.6.0",
         "ms": "^2.1.3",
         "node-fetch": "^3.2.9"
