--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "types": [
             "node",
             "chai",
+            "chai-spies",
             "mocha"
         ],
         "lib": [
