--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/chai": "^4.3.1",
+        "@types/chai-spies": "^1.0.3",
         "@types/connect-mongodb-session": "^2.4.3",
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.13",
@@ -30,6 +31,7 @@
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
         "chai": "^4.3.6",
+        "chai-spies": "^1.0.0",
         "copyfiles": "^2.4.1",
         "eslint": "^8.18.0",
         "eslint-plugin-import": "^2.26.0",
