--- a/package.json
+++ b/package.json
@@ -1,55 +1,52 @@
 {
-    "name": "funnel.js",
-    "version": "1.0.1",
-    "description": "",
-    "main": "dist/src/index.js",
-    "types": "dist/src/index.d.ts",
-    "private": true,
-    "directories": {
-        "test": "test"
-    },
-    "scripts": {
-        "dev": "echo 'nothing yet'",
-        "test": "cross-env NODE_OPTIONS='--experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 mocha test/**/*.{spec,test}.[jt]s --require test/prelude.js",
-        "build": "tsc -p tsconfig.build.json & npm run _copy-dts",
-        "_copy-dts": "copyfiles \"src/**/*.d.ts\" dist \"lib/**/*.d.ts\" dist"
-    },
-    "type": "module",
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/chai": "^4.3.1",
-        "@types/chai-spies": "^1.0.3",
-        "@types/connect-mongodb-session": "^2.4.3",
-        "@types/cookie-parser": "^1.4.3",
-        "@types/express": "^4.17.13",
-        "@types/express-session": "^1.17.4",
-        "@types/mocha": "^9.1.1",
-        "@types/ms": "^0.7.31",
-        "@types/node": "^18.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.29.0",
-        "@typescript-eslint/parser": "^5.29.0",
-        "chai": "^4.3.6",
-        "chai-spies": "^1.0.0",
-        "copyfiles": "^2.4.1",
-        "eslint": "^8.18.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-import-quotes": "^0.0.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "mocha": "^10.0.0",
-        "prettier": "^2.7.1",
-        "ts-node": "^10.9.1",
-        "tsafe": "^1.0.1",
-        "typescript": "^4.8.3"
-    },
-    "dependencies": {
-        "cross-env": "^7.0.3",
-        "dotenv": "^16.0.1",
-        "eventemitter2": "^6.4.9",
-        "is-promise": "^4.0.0",
-        "joi": "^17.6.0",
-        "ms": "^2.1.3",
-        "node-fetch": "^3.2.9"
-    }
+  "name": "funnel.js",
+  "version": "1.0.1",
+  "description": "",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
+  "private": true,
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "dev": "echo 'nothing yet'",
+    "test": "cross-env NODE_OPTIONS='--experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 mocha test/**/*.{spec,test}.[jt]s --require test/prelude.js",
+    "test:js": "cross-env TS_NODE_TRANSPILE_ONLY=1 npm test --",
+    "build": "tsc -p tsconfig.build.json & npm run _copy-dts",
+    "_copy-dts": "copyfiles \"src/**/*.d.ts\" dist \"lib/**/*.d.ts\" dist"
+  },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/chai-spies": "^1.0.3",
+    "@types/mocha": "^9.1.1",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "chai": "^4.3.6",
+    "chai-spies": "^1.0.0",
+    "copyfiles": "^2.4.1",
+    "eslint": "^8.18.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-quotes": "^0.0.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "tsafe": "^1.1.2",
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
+    "eventemitter2": "^6.4.9",
+    "is-promise": "^4.0.0",
+    "joi": "^17.6.0",
+    "ms": "^2.1.3",
+    "node-fetch": "^3.2.9"
+  }
 }
