--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,47 @@
 {
-    "compilerOptions": {
-        "types": [
-            "node",
-            "chai",
-            "chai-spies",
-            "mocha"
-        ],
-        "lib": [
-            "ESNext"
-        ],
-        "target": "es2022",
-        "module": "es2022",
-        "esModuleInterop": true,
-        "outDir": "./dist",
-        "resolveJsonModule": true,
-        "allowJs": true,
-        "declaration": true,
-        "declarationMap": true,
-        "moduleResolution": "node",
-        "strictNullChecks": true,
-        "strict": true,
-        "baseUrl": ".",
-        "paths": {
-            "src": [
-                "src"
-            ],
-            "lib": [
-                "lib"
-            ]
-        }
-    },
-    "ts-node": {
-        "files": true,
-        "esm": true
-    },
-    "include": [
-        "./lib/**/*.ts",
-        "./src/**/*.ts",
-        "./src/global.d.ts",
-        "./test/**/*.ts",
+  "compilerOptions": {
+    "types": [
+      "node",
+      "chai",
+      "chai-spies",
+      "mocha"
     ],
-    "exclude": [
-        "./node_modules",
+    "lib": [
+      "ESNext"
     ],
+    "target": "es2022",
+    "module": "es2022",
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "declaration": true,
+    "declarationMap": true,
+    "moduleResolution": "node",
+    "strictNullChecks": true,
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "src": [
+        "src"
+      ],
+      "lib": [
+        "lib"
+      ]
+    },
+    "noErrorTruncation": true
+  },
+  "ts-node": {
+    "files": true,
+    "esm": true
+  },
+  "include": [
+    "./lib/**/*.ts",
+    "./src/**/*.ts",
+    "./src/global.d.ts",
+    "./test/**/*.ts",
+  ],
+  "exclude": [
+    "./node_modules",
+  ],
 }
