--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "echo 'nothing yet'",
-    "test": "cross-env NODE_OPTIONS='--experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 mocha test/**/*.{spec,test}.[jt]s --require test/prelude.js",
+    "test": "cross-env NODE_NO_WARNINGS=1 mocha test/**/*.{spec,test}.[jt]s --require test/prelude.js",
     "test:js": "cross-env TS_NODE_TRANSPILE_ONLY=1 npm test --",
     "build": "tsc -p tsconfig.build.json & npm run _copy-dts",
     "_copy-dts": "copyfiles \"src/**/*.d.ts\" dist \"lib/**/*.d.ts\" dist"
@@ -38,6 +38,7 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "tsafe": "^1.1.2",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.3"
   },
   "dependencies": {
