attempt to fix path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,10 @@
     "baseUrl": ".",
     "paths": {
       "src": [
-        "src"
+        "src/*"
       ],
       "lib": [
-        "lib"
+        "lib/*"
       ]
     },
     "noErrorTruncation": true
